--- a/frontend/src/styles/SelectInsurance.css
+++ b/frontend/src/styles/SelectInsurance.css
@@ -61,7 +61,6 @@
   height: 8px;
   position: relative;
   border-radius: 100px;
-  overflow: hidden;
   background: transparent;
 }
 
@@ -825,7 +824,6 @@
   padding: 24px;
   margin-bottom: 32px;
   position: relative;
-  overflow: hidden;
 }
 
 .plan-details-od__card-title {
